User-Service-Communication/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ua-app
  namespace: production
spec:
  hosts:
  - app.devopsbyexample.com
  - ua-app
  gateways:
  - api
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ua-app
        subset: v1
      weight: 10
    - destination:
        host: ua-app
        subset: v2
      weight: 90
